--- a/sign_in.html
+++ b/sign_in.html
@@ -11,7 +11,7 @@
       <section>
        <div class="logo"></div>     
         <div class="container">
-        <form id="form" class="form" onsubmit="return FormValdate()"  action="/main_page/index.html">
+        <form id="form" class="form" onsubmit="return FormValdate()"  action="index.html">
             <h2>Register With Us</h2>
             <div class="form-control">
                 <label for="username">Username</label>
